finished up gender summary

--- a/Homework_04-Pandas_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/Homework_04-Pandas_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "0           576"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -167,7 +167,7 @@
        "0                     183       3.050987                  780        2379.77"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,21 +206,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-73-492ba2fabf07>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-73-492ba2fabf07>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    grouped_gender_df = purchase_data.groupby(['Gender'],\"SN\" nunique)\u001b[0m\n\u001b[1;37m                                                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Female</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Male</td>\n",
+       "      <td>484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Total Count\n",
+       "Gender                            \n",
+       "Female                          81\n",
+       "Male                           484\n",
+       "Other / Non-Disclosed           11"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped_gender_df = purchase_data.groupby(['Gender'],\"SN\" nunique)\n",
-    "grouped_gender_df.count().head()\n"
+    "#Group by gender then remove duplicate\n",
+    "grouped_gender = purchase_data.groupby(['Gender'])\n",
+    "grouped_unique_gender = grouped_gender.nunique()\n",
+    "\n",
+    "grouped_gender_df = grouped_unique_gender [\"SN\"]\n",
+    "\n",
+    "gender_table = pd.DataFrame({ \"Total Count\": grouped_gender_df})\n",
+    "gender_table\n",
+    "\n"
    ]
   },
   {
@@ -251,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +331,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
+       "      <th>Purchases Count</th>\n",
        "      <th>Average Purchase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
        "      <th>Avg Total Purchase per Person</th>\n",
@@ -290,21 +346,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Female</th>\n",
+       "      <td>Female</td>\n",
        "      <td>113</td>\n",
        "      <td>$3.20</td>\n",
        "      <td>$361.94</td>\n",
        "      <td>$4.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Male</th>\n",
+       "      <td>Male</td>\n",
        "      <td>652</td>\n",
        "      <td>$3.02</td>\n",
        "      <td>$1,967.64</td>\n",
        "      <td>$4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
        "      <td>15</td>\n",
        "      <td>$3.35</td>\n",
        "      <td>$50.19</td>\n",
@@ -315,11 +371,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                      Purchase Count Average Purchase Price  \\\n",
-       "Gender                                                        \n",
-       "Female                           113                  $3.20   \n",
-       "Male                             652                  $3.02   \n",
-       "Other / Non-Disclosed             15                  $3.35   \n",
+       "                      Purchases Count Average Purchase Price  \\\n",
+       "Gender                                                         \n",
+       "Female                            113                  $3.20   \n",
+       "Male                              652                  $3.02   \n",
+       "Other / Non-Disclosed              15                  $3.35   \n",
        "\n",
        "                      Total Purchase Value Avg Total Purchase per Person  \n",
        "Gender                                                                    \n",
@@ -328,12 +384,25 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Calculate purchase count, average price and total purchase value by gender\n",
+    "gender_purchases_count = (purchase_data.groupby([\"Gender\"]).count()[\"Price\"]).map(\"{:,}\".format)\n",
+    "gender_purchases_average = (purchase_data.groupby([\"Gender\"]).mean()[\"Price\"]).map(\"${:,.2f}\".format)\n",
+    "gender_purchases_total = (purchase_data.groupby([\"Gender\"]).sum()[\"Price\"]).map(\"${:,.2f}\".format)\n",
+    "\n",
+    "#Calculate Normalized total\n",
+    "normalized_totals = (purchase_data.groupby([\"Gender\"]).sum()[\"Price\"] / gender_summary_table[\"Total Count\"]).map(\"${:,.2f}\".format)\n",
+    "                                                                               \n",
+    "#Purchases by Gender summary table\n",
+    "purchases_gender_summary_table = pd.DataFrame({\"Purchases Count\": gender_purchases_count, \"Average Purchase Price\": gender_purchases_average,\n",
+    "\"Total Purchase Value\": gender_purchases_total, \"Avg Total Purchase per Person\": normalized_totals})\n",
+    "purchases_gender_summary_table"
+   ]
   },
   {
    "cell_type": "markdown",
